# rusttv

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.toml  notes.md
.github/workflows/: build.yml
scripts/: dist.sh
src/: client.rs  config.rs  episode.rs  local.rs  log.rs  main.rs  resolver.rs  tests.rs
src/client/: osmc.rs  upload.rs
src/config/: tests.rs
src/episode/: tests.rs
src/local/: tests.rs
src/resolver/: multi.rs  strsim.rs  tmdb.rs
src/resolver/strsim/: tests.rs
