[package]
name = "rusttv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
regex = "1.10.2"
serde = { version = "1.0.108", features = ["derive"] }
serde_json = "1.0.108"
ssh2 = "0.9.4"
strsim = "0.10.0"
thiserror = "1.0.56"
toml = "0.8.8"
