[package]
name = "rusttv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
console = "0.15.8"
dialoguer = "0.11.0"
indicatif = "0.17.7"
proc-lock = "0.4.0"
regex = "1.10.2"
serde = { version = "1.0.108", features = ["derive"] }
serde_json = "1.0.108"
ssh2 = "0.9.4"
strsim = "0.10.0"
thiserror = "1.0.56"
toml = "0.8.8"
whoami = "1.4.1"
