[package]
name = "rusttv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
console = "0.15.8"
dialoguer = "0.11.0"
flexi_logger = "0.29.6"
indicatif = "0.17.7"
log = "0.4.22"
proc-lock = "0.4.0"
regex = "1.10.2"
serde = { version = "1.0.108", features = ["derive"] }
serde_json = "1.0.108"
serde-inline-default = "0.2.0"
ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
strsim = "0.10.0"
thiserror = "1.0.56"
typed-path = "0.9.3"
toml = "0.8.8"
ureq = { version = "2.9.1", features = ["json"] }
whoami = "1.5.0"
